[gd_scene load_steps=4 format=3 uid="uid://c1ipunpbjutsu"]

[ext_resource type="Script" path="res://enemy.gd" id="1_xyxpp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e51b3"]
size = Vector2(199, 198)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ceker"]
size = Vector2(201, 201)

[node name="Enemy" type="CharacterBody2D"]
script = ExtResource("1_xyxpp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 0)
shape = SubResource("RectangleShape2D_e51b3")

[node name="EnemyBody" type="ColorRect" parent="."]
offset_left = -100.0
offset_top = -100.0
offset_right = 101.0
offset_bottom = 101.0
color = Color(0.596078, 0, 0.109804, 1)

[node name="FlashOverlay" type="ColorRect" parent="."]
offset_left = -100.0
offset_top = -100.0
offset_right = 101.0
offset_bottom = 101.0

[node name="HitBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(0.5, 0.5)
shape = SubResource("RectangleShape2D_ceker")
